@@ -11,5 +11,6 @@ export(extractMoreauBroto)
 export(extractQSO)
 export(extractSOCN)
 export(extractTC)
+export(getUniProt)
 export(readFASTA)
 exportPattern("^[^\\.]")
