@@ -26,8 +26,7 @@
 #' \emph{Journal of Biological Chemistry}, 2004, 279, 23262.
 #' 
 #' @examples
-#' A06852 = readFASTA(system.file('AAseq/A06852.fasta', package = 'rdpi'))
-#' x = 'MPRLFSYLLGVWLLLSQLPREIPGQSTNDFIKACGRELVRLWVEICGSVSWGRTALSLEEPQLETGPPAETMPSSITKDAEILKMMLEFVPNLPQELKATLSERQPSLRELQQSASKDSNLNFEEFKKIILNRQNEAEDKSLLELKNLGLDKHSRKKRLFRMTLSEKCCQVGCIRKDIARLC'
+#' x = readFASTA(system.file('AAseq/P00750.fasta', package = 'rdpi'))[[1]]
 #' extractDC(x)
 #' 
 
