@@ -41,8 +41,7 @@
   nlag}).
 }
 \examples{
-A06852 = readFASTA(system.file('AAseq/A06852.fasta', package = 'rdpi'))
-x = 'MPRLFSYLLGVWLLLSQLPREIPGQSTNDFIKACGRELVRLWVEICGSVSWGRTALSLEEPQLETGPPAETMPSSITKDAEILKMMLEFVPNLPQELKATLSERQPSLRELQQSASKDSNLNFEEFKKIILNRQNEAEDKSLLELKNLGLDKHSRKKRLFRMTLSEKCCQVGCIRKDIARLC'
+x = readFASTA(system.file('AAseq/P00750.fasta', package = 'rdpi'))[[1]]
 extractMoreauBroto(x)
 }
 \author{
