@@ -21,8 +21,7 @@
   Numbers (Dim: \code{nlag * 2}, default is 60).
 }
 \examples{
-A06852 = readFASTA(system.file('AAseq/A06852.fasta', package = 'rdpi'))
-x = 'MPRLFSYLLGVWLLLSQLPREIPGQSTNDFIKACGRELVRLWVEICGSVSWGRTALSLEEPQLETGPPAETMPSSITKDAEILKMMLEFVPNLPQELKATLSERQPSLRELQQSASKDSNLNFEEFKKIILNRQNEAEDKSLLELKNLGLDKHSRKKRLFRMTLSEKCCQVGCIRKDIARLC'
+x = readFASTA(system.file('AAseq/P00750.fasta', package = 'rdpi'))[[1]]
 extractSOCN(x)
 }
 \author{
