@@ -19,8 +19,7 @@
   descriptor (Dim: 8000).
 }
 \examples{
-A06852 = readFASTA(system.file('AAseq/A06852.fasta', package = 'rdpi'))
-x = 'MPRLFSYLLGVWLLLSQLPREIPGQSTNDFIKACGRELVRLWVEICGSVSWGRTALSLEEPQLETGPPAETMPSSITKDAEILKMMLEFVPNLPQELKATLSERQPSLRELQQSASKDSNLNFEEFKKIILNRQNEAEDKSLLELKNLGLDKHSRKKRLFRMTLSEKCCQVGCIRKDIARLC'
+x = readFASTA(system.file('AAseq/P00750.fasta', package = 'rdpi'))[[1]]
 extractTC(x)
 }
 \author{
